# 2022-Y3CEP_WA3

./: .replit  README.md  devlog.md  game.py  gameSave.py  main.py  proposal.md  storage.py  ui.py
documents/: README.md  devlog.md  proposal.md
project/: firebase.py  main.py  storage.py  ui.py
replit/: pyproject.toml
src/: game.py  gameSave.py  main.py  storage.py  y3cep-wa3-othello-playerbase-b3b68340ee0c.json
